# tpok003

./: .gitignore  README.md  pyproject.toml
examples/: app_settings.json  example_second.csv  info.txt  status2_map.json  ДЖПТмодиф_ClickCredit_2025-06-31_7777_NBU.xlsx  ДЖПТмодиф_MC_NBU_2025-06.xlsx
notebooks/: colab_git_runner.ipynb  colab_git_runner_autodl.ipynb  colab_git_runner_onebutton.ipynb  colab_git_runner_patched.ipynb  colab_git_runner_two_step.ipynb  colab_merge_tool.ipynb
scripts/: nbutest.py
yourpkg/: __init__.py  colab_app.py  merge.py
