[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yourpkg"
version = "0.1.0"
description = "Combined build: hidden UI calling original logic"
requires-python = ">=3.10"
dependencies = ["pandas==2.2.2", "openpyxl>=3.1,<4", "gradio>=4.0"]

[project.urls]
homepage = "https://github.com/mctwork2/tpok003"

[tool.setuptools.packages.find]
include = ["yourpkg*"]
