[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yourpkg"
version = "0.1.0"
description = "Hidden UI wrapper for nbutest.py"
requires-python = ">=3.10"
dependencies = ["pandas==2.2.2", "openpyxl>=3.1,<4", "gradio>=4.0"]

[tool.setuptools.packages.find]
include = ["yourpkg*"]
